refactor: rename classes and update game configuration for improved structure and gameplay