@@ -5,7 +5,7 @@ import java.util.Random;
 
 // Composite : Un Obstacle composé de deux livres (Haut et Bas)
 class ObstacleComposite extends GameObject {
-    private List<GameSprite> children = new ArrayList<>();
+    private final List<GameSprite> children = new ArrayList<>();
     private boolean passed = false; // Pour compter le score
 
     public ObstacleComposite(int x) {
@@ -15,12 +15,24 @@ class ObstacleComposite extends GameObject {
 
     private void generateBooks(int x) {
         GameConfig conf = GameConfig.getInstance();
-        int gapY = new Random().nextInt(conf.HEIGHT - conf.PIPE_GAP - 100) + 50;
 
-        // Livre du haut
-        children.add(new GameSprite(x, 0, 60, gapY, "livre.png", new ScrollStrategy(), Color.RED));
-        // Livre du bas
-        children.add(new GameSprite(x, gapY + conf.PIPE_GAP, 60, conf.HEIGHT - (gapY + conf.PIPE_GAP), "livre.png", new ScrollStrategy(), Color.RED));
+        // 1. Define the constant dimensions
+        int fixedWidth = 90;
+        // Using the specific ratio you provided: 90 * 8.377 ≈ 754 pixels
+        int fixedHeight = (int) (fixedWidth * 8.377);
+
+        int minGapY = 50;
+        int maxRange = conf.HEIGHT - conf.PIPE_GAP - 100;
+
+
+        int gapY = new Random().nextInt(maxRange) + minGapY;
+
+        // 3. Create Top Book
+
+        children.add(new GameSprite(x, gapY - fixedHeight, fixedWidth, fixedHeight, "livre.png", new ScrollStrategy(), Color.RED));
+
+        // 4. Create Bottom Book
+        children.add(new GameSprite(x, gapY + conf.PIPE_GAP, fixedWidth, fixedHeight, "livre.png", new ScrollStrategy(), Color.RED));
     }
 
     @Override
@@ -30,7 +42,7 @@ class ObstacleComposite extends GameObject {
             sprite.update();
         }
         // Mise à jour de la position X du composite (basée sur le premier enfant)
-        if (!children.isEmpty()) this.x = children.get(0).x;
+        if (!children.isEmpty()) this.x = children.getFirst().x;
     }
 
     @Override
